2007-11-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #334675

	* mail-to-task.c: (do_mail_to_task), (text_contains_nonwhitespace),
	(get_selected_text), (convert_to_task), (org_gnome_mail_to_task),
	(org_gnome_mail_to_task_menu):
	When selected only one message, then try to use selected text in
	preview as description, instead of whole message body.

2007-11-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #353779

	* org-gnome-mail-to-task.eplug.xml:
	Allow convert more than one mail to task with one click.

2007-09-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #473903

	* mail-to-task.c: (set_attachments):
	Fixes serious compiler warning.

2007-08-16  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #350539

	* mail-to-task.c: (set_description):
	Ensures non-NULL mime_part.

2007-04-02  Sankar P  <psankar@novell.com>

	* Committed on behalf of Gilles Dartiguelongue <dartigug@esiee.fr>

	* org-gnome-mail-to-task.eplug.xml:
	Cleanup. 
	Fixes part of #301149

2006-07-31  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #310489
	* mail-to-task.c: 
	(set_attendees): 
	(set_organizer): Appended the mailto field
	to the  email values.
	(do_mail_to_task):Set the ICAL_X parameter
	so that no mail is sent to the recipients.			 

2006-06-06  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	Fixes #332605.
	* mail-to-task.c: 
	(set_description): Multipart message handling.
	(set_attachments): New function.
	Set attachment files to a task.
	(clean_name): New function.
	from plugins/save-attachments/save-attachments.c.

2006-03-04  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #330974, 333688.
	* mail-to-task.c: 
	(set_description): Check if the params are present,
	before accessing the value. Fixes a crash.
	(convert_to_task): Set the authentication function
	while creating the ECal.

2006-02-01  Chenthill Palanisamy  <pchenthill@novell.com>

	* Makefile.am: Reverting the commit made by 
	Kjartan Maraas  <kmaraas@gnome.org> so that